structure added for student and admin landing

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <!-- Angular Controller Import Start -->
   <script src="controllers/startTestController.js"></script>
   <script src="controllers/loginController.js"></script>
+  <script src="controllers/adminLandingPageController.js"></script>
+  <script src="controllers/studentLandingPageController.js"></script>
   <!-- Angular Controller Import End -->
 
   </head>
